add: moja uproszczona wersja raportow

--- a/html/index.html
+++ b/html/index.html
@@ -15,33 +15,62 @@
 .warn {
 	background: yellow;
 }
+
+li {
+	width: 20%;
+    float: left;
+    border: 3px solid black;
+    margin: 3px;
+    height: 100px;
+	    text-align: center;
+	font-weight: bold;
+	text-align: center;
+}
+
+li span {
+	font-size: 50px;
+	    font-weight: lighter;
+		width: 100%;
+		display: table;
+}
+
+ul {
+  list-style-type: none;
+}
 </style>
 <div class="main">
 
 <h1>RAPORT</h1>
- 
-
-	<div class="alert">
-		
-		Twoja <b>LEWA</b> jest nie dotrenowana!
-		
-	</div>
-
-
 
 <img src="../inputseries.png" width="100%" />
-<img src="../timeseries_rap.png" width="100%" />
 
-
- 
 <ul>
 
-   <li>Foo</li>
+<li>lewy_abs <span>20.15%</span></li>
 
-   <li>Bar</li>
+<li>prawy_abs <span>25.27%</span></li>
 
-   <li>Qux</li>
+<li>prawa_klatka <span>25.96%</span></li>
+
+<li>lewa_klatka <span>4.71%</span></li>
+
+<li>prawy_biceps <span>13.76%</span></li>
+
+<li>lewy_biceps <span>10.03%</span></li>
+
+<li>prawe_ramie <span>27.53%</span></li>
+
+<li>lewe_ramie <span>10.51%</span></li>
+
+<li>prawe_udo <span>4.1%</span></li>
+
+<li>lewe_udo <span>9.47%</span></li>
 
 </ul>
+<div>
+
+</div>
+
+<img src="../timeseries_rap.png" width="100%" />
 
 </div>
