add: koncowe poprawki

--- a/webapp/camera.html
+++ b/webapp/camera.html
@@ -1,5 +1,6 @@
 <html lang=”en”>
 <head>
+    <link rel="shortcut icon" href="illustrations/logo.png">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +19,7 @@
         <!-- Camera output -->
         <img src="//:0" alt="" id="camera--output">
         <!-- Camera trigger -->
-        <button id="camera--trigger">Take a picture</button>
+        <a href="main.html"><button id="camera--trigger">Take a picture</button></a>
     </main>
     <!-- Reference to your JavaScript file -->
     <script src="app.js"></script>
